# wire

./: README.md  pyproject.toml
debian/: control  rules
src/wire/: __init__.py  config.yml
src/wire/ui/: mainwindow.ui
src/wire/ui/rs/: cp
